--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/layout"
-      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout ">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Meetup App</title>
 </head>
 <body>
-<div layout:fragment="content">
-    <p>
-        Set you meetings with Meetup!
-    <p th:text="${name}"/>
-</div>
+<p>
+    Set you meetings with Meetup!
+<p/>
 </body>
 </html>
