--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" type="text/css"
-          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
 
     <title>Registration</title>
 </head>
 <body>
+
+<br>
+<br>
 
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
             <div th:if="${param.success}">
-                <div class="alert alert-info">You've successfully registered to meet up system!</div>
+                <div class="alert alert-info">You've successfully registered to bike rental system!</div>
             </div>
 
             <h1>Registration</h1>
-            <form th:action="@{/registration}" th:object="${registrationDto}" method="post" class="form-signin">
-
-               <!-- <p class="error" th:text="${userExistsExceptionMessage}">-->
+            <form th:action="@{/registration}" th:object="${user}" method="post">
 
                 <p class="error-message" th:if="${#fields.hasGlobalErrors()}"
                    th:each="error : ${#fields.errors('global')}" th:text="${error}">Validation
@@ -34,25 +34,23 @@
                      th:classappend="${#fields.hasErrors('firstName')}? 'has-error':''">
                     <label for="firstName" class="control-label">First name</label> <input
                         id="firstName" class="form-control" th:field="*{firstName}" />
-                  <p class="error-message"
-                       th:each="firstNameValRes: ${#fields.errors('firstName')}"
-                       th:text="${firstNameValRes}">Validation error</p>
-
+                    <p class="error-message"
+                      th:each="error: ${#fields.errors('firstName')}"
+                       th:text="${error}">Validation error</p>
                 </div>
-                <div class="form-group"
-                     th:classappend="${#fields.hasErrors('lastName')}? 'has-error':''">
+                <div class="form-group" th:classappend="${#fields.hasErrors('lastName')}? 'has-error':''">
                     <label for="lastName" class="control-label">Last name</label> <input
                         id="lastName" class="form-control" th:field="*{lastName}" />
                     <p class="error-message"
-                       th:each="lastNameValRes : ${#fields.errors('lastName')}"
-                       th:text="${lastNameValRes }">Validation error</p>
-                </div>
+                       th:each="error : ${#fields.errors('lastName')}"
+                       th:text="${error}">Validation error</p>
+
                 <div class="form-group"
                      th:classappend="${#fields.hasErrors('email')}? 'has-error':''">
                     <label for="email" class="control-label">E-mail</label> <input
                         id="email" class="form-control" th:field="*{email}" />
                     <p class="error-message"
-                       th:each="emailValRes : ${#fields.errors('email')}" th:text="${emailValRes}">Validation
+                       th:each="error : ${#fields.errors('email')}" th:text="${error}">Validation
                         error</p>
                 </div>
                 <div class="form-group"
@@ -61,8 +59,8 @@
                         e-mail</label> <input id="confirmEmail" class="form-control"
                                               th:field="*{confirmEmail}" />
                     <p class="error-message"
-                       th:each="emailValRes : ${#fields.errors('confirmEmail')}"
-                       th:text="${emailValRes}">Validation error</p>
+                       th:each="error : ${#fields.errors('confirmEmail')}"
+                       th:text="${error}">Validation error</p>
                 </div>
                 <div class="form-group"
                      th:classappend="${#fields.hasErrors('password')}? 'has-error':''">
@@ -70,8 +68,8 @@
                         id="password" class="form-control" type="password"
                         th:field="*{password}" />
                     <p class="error-message"
-                       th:each="passwordValRes : ${#fields.errors('password')}"
-                       th:text="${passwordValRes}">Validation error</p>
+                       th:each="error : ${#fields.errors('password')}"
+                       th:text="${error}">Validation error</p>
                 </div>
                 <div class="form-group"
                      th:classappend="${#fields.hasErrors('confirmPassword')}? 'has-error':''">
@@ -79,8 +77,8 @@
                         password</label> <input id="confirmPassword" class="form-control"
                                                 type="password" th:field="*{confirmPassword}" />
                     <p class="error-message"
-                       th:each="passwordValRes : ${#fields.errors('confirmPassword')}"
-                       th:text="${passwordValRes}">Validation error</p>
+                       th:each="error : ${#fields.errors('confirmPassword')}"
+                       th:text="${error}">Validation error</p>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success">Register</button>
@@ -93,5 +91,9 @@
     </div>
 </div>
 
+<script type="text/javascript"
+        th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+<script type="text/javascript"
+        th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 </body>
 </html>
