--- a/src/main/resources/templates/personal-calendar.html
+++ b/src/main/resources/templates/personal-calendar.html
@@ -9,57 +9,93 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .topnav {
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        .topnav a {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 15px 17px;
+            text-decoration: none;
+            font-size: 15px;
+        }
+
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .topnav a.active {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .topnav-right {
+            float: right;
+        }
+
+        .navbar-brand {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 12px 14px;
+            text-decoration: none;
+            font-size: 15px;
         }
     </style>
     <title>Personal Calendar</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"/>
-    <script crossorigin="anonymous" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js" integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg==" crossorigin="anonymous"></script>
-    <link href="../static/css/bootstrap-datetimepicker.min.css" th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet" />
-    <script src="../static/js/bootstrap-datetimepicker.min.js" th:src="@{/js/bootstrap-datetimepicker.min.js}" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js" integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg==" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script crossorigin="anonymous" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f"
+            src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"
+            integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg=="
+            crossorigin="anonymous"></script>
+    <link href="../static/css/bootstrap-datetimepicker.min.css" th:href="@{/css/bootstrap-datetimepicker.min.css}"
+          rel="stylesheet"/>
+    <script src="../static/js/bootstrap-datetimepicker.min.js" th:src="@{/js/bootstrap-datetimepicker.min.js}"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"
+            integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg=="
+            crossorigin="anonymous"></script>
 
 </head>
 <body>
-<div th:fragment="navbar">
-    <nav class="navbar navbar-inverse bg-dark navbar-dark">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Personal Calendar</a>
-            </div>
-            <ul class="nav navbar-nav" sec:authorize="isAnonymous()">
-                <li class="active"><a href="#">Home</a></li>
-            </ul>
-            <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#" th:href="@{/personal-calendar}" th:inline="text">Personal Calendar</a></li>
-                <li><a href="#">Friend's Plans</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right" sec:authorize="isAnonymous()">
-                <li><a href="#" th:href="@{/registration}" th:inline="text"><span
-                        class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-                <li><a href="#" th:href="@{/login}" th:inline="text"><span class="glyphicon glyphicon-log-in"></span>Login</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right" sec:authorize="isAuthenticated()">
-                <li><a href="#" th:href="@{/profile}" th:inline="text"><span class="glyphicon glyphicon-user"></span>Profile</a>
-                </li>
-                <li><a href="#" th:href="@{/logout}" th:inline="text"><span class="glyphicon glyphicon-log-in"></span>Logout</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<div class="topnav">
+    <a class="navbar-brand" href="#">Meetup</a>
+    <a th:href="@{/}">Home</a>
+    <a th:href="@{/personal-calendar}">Personal Calendar</a>
+    <a th:href="@{/friends-plans}">Friend's Plans</a>
+    <div class="topnav-right" sec:authorize="isAnonymous()">
+        <a href="#" th:href="@{/registration}" th:inline="text"><span class="glyphicon glyphicon-user"></span> Sign
+            Up</a>
+        <a href="#" th:href="@{/login}" th:inline="text"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+    </div>
+    <div class="topnav-right" sec:authorize="isAuthenticated()">
+        <a href="#" th:href="@{/profile}" th:inline="text"><span class="glyphicon glyphicon-user"></span> Profile</a>
+        <a href="#" th:href="@{/logout}" th:inline="text"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+    </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 mt-5">
-            <form method="post" th:object="${event}">
+<div style="padding-left:16px">
+    <div class="row" style="padding-left:100px">
+        <div class="col-md-3 mt-4">
+            <form class="form" method="post" th:object="${event}">
 
                 <h2>Add entry to your calendar</h2>
 
@@ -76,25 +112,54 @@
 
                 <div class="form-group">
                     <label for="id_end_time">Start Time:</label>
-                    <div class="input-group date" id="event_time">
-                        <input type="text" name="end_time" value="11:31:00" class="form-control" placeholder="End time" th:field="*{time}" title="" required id="id_end_time"/>
+                    <div class="input-group date" id="start_time">
+                        <input type="text" name="end_time" value="11:31:00" class="form-control"
+                               placeholder="Start time" th:field="*{time}" title="" required id="id_start_time"/>
                         <div class="input-group-addon input-group-append">
                             <div class="input-group-text">
                                 <i class="glyphicon glyphicon-time fa fa-clock-o"></i>
                             </div>
                         </div>
                     </div>
+                    <br>
+                    <div>
+                        <div class="form-group">
+                            <label for="id_end_time">End Time:</label>
+                            <div class="input-group date" id="end_time">
+                                <input type="text" name="end_time" value="12:31:00" class="form-control"
+                                       placeholder="End time" th:field="*{time}" title="" required id="id_end_time"/>
+                                <div class="input-group-addon input-group-append">
+                                    <div class="input-group-text">
+                                        <i class="glyphicon glyphicon-time fa fa-clock-o"></i>
+                                    </div>
+                                </div>
+                                <br>
+
+                            </div>
+                        </div>
+                        <br>
+
+                    </div>
+                    <button class="btn btn-primary" type="submit">Submit form</button>
                 </div>
-
-                <button class="btn btn-primary" type="submit">Submit form</button>
-
             </form>
         </div>
     </div>
 </div>
+</div>
 
 <script>
-    $('#event_time').datetimepicker({
+    $('#start_time').datetimepicker({
+        "allowInputToggle": true,
+        "showClose": true,
+        "showClear": true,
+        "showTodayButton": true,
+        "format": "HH:mm:ss",
+    });
+</script>
+
+<script>
+    $('#end_time').datetimepicker({
         "allowInputToggle": true,
         "showClose": true,
         "showClear": true,
