--- a/src/main/resources/templates/saved.html
+++ b/src/main/resources/templates/saved.html
@@ -53,13 +53,9 @@
     <title>Meetup</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
+
 </head>
 <body>
 <div class="topnav">
@@ -81,9 +77,10 @@
 <div class="container-fluid", style="padding-left: 100px">
     <h2 class="mt-5 mb-2">Event submitted</h2>
 
-    <p><label>Title: </label> <strong th:text="${event.title}"></strong></p>
+    <p><label>Title: </label> <strong th:text="${event.id}"></strong></p>
     <p><label>Description: </label> <strong th:text="${event.description}"></strong></p>
-    <p><label>Time: </label> <strong th:text="${event.time}"></strong></p>
+    <p><label>Time: </label> <strong th:text="${event.date}"></strong></p>
+    <p><label>Time: </label> <strong th:text="${event.date2}"></strong></p>
 
     <a th:href="@{/personal-calendar}" class="btn btn-primary">Go back</a>
 </div>
