--- a/src/main/resources/templates/personal-calendar.html
+++ b/src/main/resources/templates/personal-calendar.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
@@ -50,123 +51,90 @@
             font-size: 15px;
         }
     </style>
-    <title>Personal Calendar</title>
+    <title>Add event</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script crossorigin="anonymous" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f"
-            src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"
-            integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg=="
-            crossorigin="anonymous"></script>
-    <link href="../static/css/bootstrap-datetimepicker.min.css" th:href="@{/css/bootstrap-datetimepicker.min.css}"
-          rel="stylesheet"/>
-    <script src="../static/js/bootstrap-datetimepicker.min.js" th:src="@{/js/bootstrap-datetimepicker.min.js}"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"
-            integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg=="
-            crossorigin="anonymous"></script>
+    <link th:rel="stylesheet" th:href="@{/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css}"/>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
+    <link th:rel="stylesheet" th:href="@{/webjars/font-awesome/5.11.2/css/all.css} "/>
 
 </head>
+
 <body>
-<div class="topnav">
-    <a class="navbar-brand" href="#">Meetup</a>
-    <a th:href="@{/}">Home</a>
-    <a th:href="@{/personal-calendar}">Personal Calendar</a>
-    <a th:href="@{/friends-plans}">Friend's Plans</a>
-    <div class="topnav-right" sec:authorize="isAnonymous()">
-        <a href="#" th:href="@{/registration}" th:inline="text"><span class="glyphicon glyphicon-user"></span> Sign
-            Up</a>
-        <a href="#" th:href="@{/login}" th:inline="text"><span class="glyphicon glyphicon-log-in"></span> Login</a>
-    </div>
-    <div class="topnav-right" sec:authorize="isAuthenticated()">
-        <a href="#" th:href="@{/profile}" th:inline="text"><span class="glyphicon glyphicon-user"></span> Profile</a>
-        <a href="#" th:href="@{/logout}" th:inline="text"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-4 mt-5">
+            <form method="post" th:object="${event}">
+
+           &lt;!&ndash;     <div class="form-group">
+                    <label for="id">User id:</label>
+                    <input type="text" id="id" placeholder="User id" autocomplete="off" class="form-control"
+                           th:field="*{id}"/>
+                </div>&ndash;&gt;
+
+                <div class="form-group">
+                    <label for="event">Description:</label>
+                    <input type="text" rows="2" id="event" placeholder="Event description - add your personal notes" autocomplete="off" class="form-control"
+                           th:field="*{description}"/>
+                </div>
+                <div class="form-group">
+                    <label for="date">Start Date & Time:</label>
+                    <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"
+                               th:field="*{date}" id="date" placeholder="Start Date & Time"/>
+                        <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+                            <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="date2">End Date & Time:</label>
+                    <div class="input-group date2" id="datetimepicker2" data-target-input="nearest">
+                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2"
+                               th:field="*{date2}" id="date2" placeholder="End Date & Time"/>
+                        <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
+                            <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
+                        </div>
+                    </div>
+                </div>
+
+                <button class="btn btn-primary" type="submit">Add event</button>
+            </form>
+        </div>
     </div>
 </div>
 
-<!--<div style="padding-left:16px">-->
-<!--    <div class="row" style="padding-left:100px">-->
-<!--        <div class="col-md-3 mt-4">-->
-<!--            <form class="form" method="post" th:object="${event}">-->
-
-<!--                <h2>Add entry to your calendar</h2>-->
-
-<!--                <div class="form-group">-->
-<!--                    <label for="title">Title:</label>-->
-<!--                    <input type="text" id="title" placeholder="Title" class="form-control" th:field="*{title}"/>-->
-<!--                </div>-->
-
-<!--                <div class="form-group">-->
-<!--                    <label for="description">Description:</label>-->
-<!--                    <textarea type="text" rows="2" id="description" placeholder="Description" class="form-control"-->
-<!--                              th:field="*{description}"></textarea>-->
-<!--                </div>-->
-
-<!--                <div class="form-group">-->
-<!--                    <label for="id_end_time">Start Time:</label>-->
-<!--                    <div class="input-group date" id="start_time">-->
-<!--                        <input type="text" name="end_time" value="11:31:00" class="form-control"-->
-<!--                               placeholder="Start time" th:field="*{time}" title="" required id="id_start_time"/>-->
-<!--                        <div class="input-group-addon input-group-append">-->
-<!--                            <div class="input-group-text">-->
-<!--                                <i class="glyphicon glyphicon-time fa fa-clock-o"></i>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <br>-->
-<!--                    <div>-->
-<!--                        <div class="form-group">-->
-<!--                            <label for="id_end_time">End Time:</label>-->
-<!--                            <div class="input-group date" id="end_time">-->
-<!--                                <input type="text" name="end_time" value="12:31:00" class="form-control"-->
-<!--                                       placeholder="End time" th:field="*{time}" title="" required id="id_end_time"/>-->
-<!--                                <div class="input-group-addon input-group-append">-->
-<!--                                    <div class="input-group-text">-->
-<!--                                        <i class="glyphicon glyphicon-time fa fa-clock-o"></i>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <br>-->
-
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <br>-->
-
-<!--                    </div>-->
-<!--                    <button class="btn btn-primary" type="submit">Submit form</button>-->
-<!--                </div>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-</div>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/moment.min.js}"></script>
+<script th:src="@{/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.js}"></script>
 
 <script>
-    $('#start_time').datetimepicker({
-        "allowInputToggle": true,
-        "showClose": true,
-        "showClear": true,
-        "showTodayButton": true,
-        "format": "HH:mm:ss",
+    $.fn.datetimepicker.Constructor.Default = $.extend({}, $.fn.datetimepicker.Constructor.Default, {
+        icons: {
+            time: 'far fa-clock',
+            date: 'far fa-calendar',
+            up: 'fas fa-arrow-up',
+            down: 'fas fa-arrow-down',
+            previous: 'fas fa-chevron-left',
+            next: 'fas fa-chevron-right',
+            today: 'far fa-calendar-check-o',
+            clear: 'far fa-trash',
+            close: 'far fa-times'
+        } });
+
+    $('#datetimepicker1').datetimepicker({
+        format: 'DD/MM/YYYY h:mm A'
+    });
+
+    $('#datetimepicker2').datetimepicker({
+        format: 'DD/MM/YYYY h:mm A'
     });
 </script>
-
-<script>
-    $('#end_time').datetimepicker({
-        "allowInputToggle": true,
-        "showClose": true,
-        "showClear": true,
-        "showTodayButton": true,
-        "format": "HH:mm:ss",
-    });
-</script>
-
 </body>
-</html>
+</html>-->
