--- a/src/main/resources/templates/saved.html
+++ b/src/main/resources/templates/saved.html
@@ -77,7 +77,7 @@
 <div class="container-fluid", style="padding-left: 100px">
     <h2 class="mt-5 mb-2">Event submitted</h2>
 
-    <p><label>Title: </label> <strong th:text="${event.id}"></strong></p>
+   <!-- <p><label>Title: </label> <strong th:text="${event.id}"></strong></p>-->
     <p><label>Description: </label> <strong th:text="${event.description}"></strong></p>
     <p><label>Time: </label> <strong th:text="${event.date}"></strong></p>
     <p><label>Time: </label> <strong th:text="${event.date2}"></strong></p>
