--- a/src/main/resources/templates/new_event.html
+++ b/src/main/resources/templates/new_event.html
@@ -54,6 +54,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
         <link th:rel="stylesheet" th:href="@{/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.css}"/>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
     <link th:rel="stylesheet" th:href="@{/webjars/font-awesome/5.11.2/css/all.css} "/>
@@ -62,12 +63,37 @@
 
 <body>
 
+<div class="topnav">
+    <a class="navbar-brand" href="#">Meetup</a>
+    <a th:href="@{/}">Home</a>
+    <a th:href="@{/personal-calendar}">Personal Calendar</a>
+    <a th:href="@{/friends-plans}">Friend's Plans</a>
+    <div class="topnav-right" sec:authorize="isAnonymous()">
+        <a href="#" th:href="@{/registration}" th:inline="text"><span class="glyphicon glyphicon-user"></span> Sign
+            Up</a>
+        <a href="#" th:href="@{/login}" th:inline="text"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+    </div>
+    <div class="topnav-right" sec:authorize="isAuthenticated()">
+        <a href="#" th:href="@{/profile}" th:inline="text"><span class="glyphicon glyphicon-user"></span> Profile</a>
+        <a href="#" th:href="@{/logout}" th:inline="text"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+    </div>
+</div>
+<br>
+<br>
+
 <div class="container">
+
 
     <div class="row">
         <div class="col-md-4 mt-5">
+            <h1>Add new event</h1>
+
             <form action="#" th:action="@{/saveEvent}" th:object="${event}"
                   method="POST">
+
+                <p class="error-message" th:if="${#fields.hasGlobalErrors()}"
+                   th:each="error : ${#fields.errors('global')}" th:text="${error}">Validation
+                    error</p>
 <!--
                 <div class="form-group">
                     <label for="id">User id:</label>
@@ -77,14 +103,16 @@
 
                 <div class="form-group">
                     <label for="event">Description:</label>
-                    <input type="text" rows="2" id="event" placeholder="Event description - add your personal notes" autocomplete="off" class="form-control"
+                    <input type="text" rows="2" id="event" placeholder="Event description - add your personal notes" class="form-control" autofocus="autofocus"
                            th:field="*{description}"/>
                 </div>
+
+
                 <div class="form-group">
                     <label for="date">Start Date & Time:</label>
                     <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"
-                               th:field="*{date}" id="date" placeholder="Start Date & Time"/>
+                               th:field="*{date}" id="date" placeholder="Start Date & Time" autofocus="autofocus"/>
                         <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
                             <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
                         </div>
@@ -95,18 +123,23 @@
                     <label for="date2">End Date & Time:</label>
                     <div class="input-group date2" id="datetimepicker2" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2"
-                               th:field="*{date2}" id="date2" placeholder="End Date & Time"/>
+                               th:field="*{date2}" id="date2" placeholder="End Date & Time" autofocus="autofocus"/>
                         <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
                             <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
                         </div>
                     </div>
                 </div>
 
+
+
                 <button class="btn btn-primary" type="submit">Add event</button>
+
             </form>
+
         </div>
     </div>
 </div>
+
 
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
@@ -135,6 +168,7 @@
     $('#datetimepicker2').datetimepicker({
         format: 'DD/MM/YYYY h:mm A'
     });
+
 </script>
 </body>
 </html>
