--- a/src/main/resources/templates/saved.html
+++ b/src/main/resources/templates/saved.html
@@ -74,16 +74,22 @@
     </div>
 </div>
 
-<div class="container-fluid", style="padding-left: 100px">
-    <h2 class="mt-5 mb-2">Event submitted</h2>
+<br>
+<br>
+
+<div class="row">
+    <div class="mx-auto">
+        <h1>Event submitted</h1>
+
 
    <!-- <p><label>Title: </label> <strong th:text="${event.id}"></strong></p>-->
     <p><label>Description: </label> <strong th:text="${event.description}"></strong></p>
-    <p><label>Time: </label> <strong th:text="${event.date}"></strong></p>
-    <p><label>Time: </label> <strong th:text="${event.date2}"></strong></p>
+    <p><label>Start Time & Time: </label> <strong th:text="${event.date}"></strong></p>
+    <p><label>End Time & Time: </label> <strong th:text="${event.date2}"></strong></p>
 
-    <a th:href="@{/personal-calendar}" class="btn btn-primary">Go back</a>
+    <a th:href="@{/showNewEventForm}" class="btn btn-primary">Go back</a>
+    <a th:href="@{/personal-calendar}" class="btn btn-primary">Go to Personal Calendar</a>
 </div>
-
+</div>
 </body>
 </html>
