Personal calendar and friends calendar

--- a/src/main/resources/templates/add-event.html
+++ b/src/main/resources/templates/add-event.html
@@ -83,11 +83,11 @@
         <div class="col-md-4 mt-5">
             <form method="post" th:object="${event}">
 
-                <div class="form-group">
-                    <label for="id">User id:</label>
-                    <input type="number" id="id" placeholder="User id - numerical only" autocomplete="off" class="form-control"
-                           th:field="*{id}"/>
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label for="id">User id:</label>-->
+<!--                    <input type="number" id="id" placeholder="User id - numerical only" autocomplete="off" class="form-control"-->
+<!--                           th:field="*{id}"/>-->
+<!--                </div>-->
 
                 <div class="form-group">
                     <label for="event">Description:</label>
