--- a/src/main/resources/templates/friends-plans.html
+++ b/src/main/resources/templates/friends-plans.html
@@ -108,26 +108,29 @@
         <a href="#" th:href="@{/logout}" th:inline="text"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
     </div>
 </div>
-<div class="container-fluid", style="padding-left: 100px">
-    <h2 class="mt-5 mb-2">Your events </h2>
-    <div class="row">
-        <div class="col-md-4 mt-5">
-            <table>
+<div class="container-fluid">
+    <div class="col-md-4 mt-5">
+
+        <form th:object="${checkTimes}" method="post" th:action="@{/personal-calendar}">
+            <button th:type="submit">Check the best meeting time</button>
+        </form>
+
+        <h2>All events:</h2>
+        <table>
+            <tr>
+                <th>Event description</th>
+                <th>Start date</th>
+                <th>End date</th>
+            </tr>
+            <th:block th:each="event : ${events}">
                 <tr>
-                    <th>Event description</th>
-                    <th>Start date</th>
-                    <th>End date</th>
+                    <th th:text="${event.description}"></th>
+                    <th th:text="${event.date}"></th>
+                    <th th:text="${event.date2}"></th>
+                    <th th:text="${event.user}"></th>
                 </tr>
-                <th:block th:each="event : ${events}">
-                    <tr>
-                        <th th:text="${event.description}"></th>
-                        <th th:text="${event.date}"></th>
-                        <th th:text="${event.date2}"></th>
-                        <th th:text="${event.user}"></th>
-                    </tr>
-                </th:block>
-            </table>
-        </div>
+            </th:block>
+        </table>
     </div>
 </div>
 
