--- a/src/main/resources/templates/meeting-time.html
+++ b/src/main/resources/templates/meeting-time.html
@@ -19,7 +19,6 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
-
         body {
             background-image: url('https://iili.io/2TBvAQ.jpg');
             background-repeat: no-repeat;
@@ -108,27 +107,9 @@
         <a href="#" th:href="@{/logout}" th:inline="text"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
     </div>
 </div>
-<div class="container-fluid", style="padding-left: 100px">
-    <h2 class="mt-5 mb-2">Your events </h2>
-    <div class="row">
-        <div class="col-md-4 mt-5">
-            <table>
-                <tr>
-                    <th>Event description</th>
-                    <th>Start date</th>
-                    <th>End date</th>
-                </tr>
-                <th:block th:each="event : ${events}">
-                    <tr>
-                        <th th:text="${event.description}"></th>
-                        <th th:text="${event.date}"></th>
-                        <th th:text="${event.date2}"></th>
-                        <th th:text="${event.user}"></th>
-                    </tr>
-                </th:block>
-            </table>
-        </div>
-    </div>
+<div class="container-fluid">
+    <p>
+    <p th:text="${checkTimes}"/>
 </div>
 
 </body>
