--- a/src/main/resources/templates/personal-calendar.html
+++ b/src/main/resources/templates/personal-calendar.html
@@ -123,6 +123,7 @@
                         <th th:text="${event.description}"></th>
                         <th th:text="${event.date}"></th>
                         <th th:text="${event.date2}"></th>
+                        <th><a th:href="@{/deleteEvent/{id}(id=${event.id})}" class="btn btn-danger">Delete</a></th>
                     </tr>
                 </th:block>
             </table>
