--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -79,7 +79,7 @@
         <a th:href="@{/}">Home</a>
         <a th:href="@{/personal-calendar}">Personal Calendar</a>
         <a th:href="@{/add-event}">Add event</a>
-        <a th:href="@{/}">Friend's Plans</a>
+        <a th:href="@{/friends-plans}">Friend's Plans</a>
         <div class="topnav-right" sec:authorize="isAuthenticated()">
             <a href="#" th:href="@{/profile}" th:inline="text"><span class="glyphicon glyphicon-user"></span>
                 Profile</a>
