--- a/src/main/resources/templates/meeting-time.html
+++ b/src/main/resources/templates/meeting-time.html
@@ -112,7 +112,8 @@
 <div class="container-fluid">
     <div class="col-md-6 col-md-offset-3">
         <h2>Your meeting should be scheduled on </h2>
-        <p style="font-size:30px" th:text="${checkSuitableDate}"/>
+        <p style="font-size:30px" th:text="${bestDate}"/>
+        <p style="font-size:30px" th:text="${bestTime}"/>
     </div>
 </div>
 
