--- a/src/main/resources/templates/new_event.html
+++ b/src/main/resources/templates/new_event.html
@@ -136,7 +136,7 @@
 
 
 
-                <button class="btn btn-primary" type="submit">Add event</button>
+                <button class="btn btn-primary" type="submit">Submit</button>
 
             </form>
 
