--- a/src/main/resources/templates/saved.html
+++ b/src/main/resources/templates/saved.html
@@ -62,7 +62,6 @@
     <a class="navbar-brand" href="#">Meetup</a>
     <a th:href="@{/}">Home</a>
     <a th:href="@{/personal-calendar}">Personal Calendar</a>
-    <a th:href="@{/add-event}">Add event</a>
     <a th:href="@{/friends-plans}">Friend's Plans</a>
     <div class="topnav-right" sec:authorize="isAnonymous()">
         <a href="#" th:href="@{/registration}" th:inline="text"><span class="glyphicon glyphicon-user"></span> Sign
@@ -75,16 +74,19 @@
     </div>
 </div>
 
-<div class="container-fluid", style="padding-left: 100px">
-    <h2 class="mt-5 mb-2">Event submitted</h2>
+<br>
+<br>
 
-<!--    <p><label>User id: </label> <strong th:text="${event.id}"></strong></p>-->
-    <p><label>Description: </label> <strong th:text="${event.description}"></strong></p>
-    <p><label>Start Date & Time: </label> <strong th:text="${event.date}"></strong></p>
-    <p><label>End Date & Time: </label> <strong th:text="${event.date2}"></strong></p>
+<div class="row">
+    <div class="mx-auto">
+        <h1>Event submitted</h1>
+        <p><label>Description: </label> <strong th:text="${event.description}"></strong></p>
+        <p><label>Start Time & Time: </label> <strong th:text="${event.date}"></strong></p>
+        <p><label>End Time & Time: </label> <strong th:text="${event.date2}"></strong></p>
 
-    <a th:href="@{/personal-calendar}" class="btn btn-primary">Go to Personal calendar</a>
+        <a th:href="@{/add-event}" class="btn btn-primary">Add another event</a>
+        <a th:href="@{/personal-calendar}" class="btn btn-primary">Go to Personal Calendar</a>
+    </div>
 </div>
-
 </body>
 </html>
